[package]
name = "transactions_processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.3"
