[package]
name = "transactions_processor"
description = "Engine to process transactions and print final state of accounts."
readme = "README.md"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
authors = ["Krystian Wojtas <krystian.wojtas@gmail.com>"]
repository = "https://gitlab.com/krystian.wojtas/transactions_processor/-/tree/readme"

[dependencies]
csv = "*"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_matches = "1.3"
assert_cmd = "2.0.0"
predicates = "2.0.2"
